# Main

./: Makefile  README.md  e2b.Dockerfile  package-lock.json  pyproject.toml
docs/: README.md
docs/source/en/: _config.py  guided_tour.md  index.md
docs/source/en/conceptual_guides/: intro_agents.md
docs/source/en/examples/: multiagents.md  rag.md  text_to_sql.md
docs/source/en/reference/: agents.md  tools.md
docs/source/en/tutorials/: building_good_agents.md  secure_code_execution.md  tools.md
examples/: benchmark.ipynb  e2b_example.py  rag.py  text_to_sql.py  tool_calling_agent_from_any_llm.py  tool_calling_agent_ollama.py
src/vertex/: agents.py  e2b_executor.py  tools.py
src/vertex_agents_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_agents.py  test_final_answer.py  test_models.py  test_monitoring.py  test_python_interpreter.py  test_search.py  test_tools.py  test_types.py
